...
        item.title, 
        item.image ?? ""
      );
  return (

    <TouchableOpacity
    testID="recipe-card"
    style={styles.itemWrapper}
    key={item.id}
    onPress={() => onNavigate(item.id, item.title, item.image ?? "")}
      >
    <View style={styles.card}>
     <View style={styles.cardLikeWrapper}>
...
