...
            <TouchableOpacity onPress={() => setModalVisible(false)} style={styles.closeButton} >
              <Text>Close</Text>
              </TouchableOpacity>


            {mealPlan && !isSaved ? (
    <TouchableOpacity onPress={onSave} style={styles.saveButton} testID="save-plan-button" accessible={true}>
      <Text>Save</Text>
    </TouchableOpacity>
) : null}

{mealPlan && isSaved ? (
  <TouchableOpacity onPress={() => { onDelete(); setModalVisible(false); }} style={styles.deleteButton} testID="delete-plan-button" accessible={true}>
    <Text>Delete</Text>
  </TouchableOpacity>
) : null}
</View>
          </View>
        </View>
...
